<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Buttons">

    <Button
        android:id="@+id/button_BMI_Calculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_BMI_calc"
        app:layout_constraintBottom_toTopOf="@+id/button_Cls_Calculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/button_Cls_Calculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_Cals_calc"
        app:layout_constraintBottom_toTopOf="@+id/button_Recipes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_BMI_Calculator"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/button_Recipes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_Recipes"
        app:layout_constraintBottom_toTopOf="@+id/button_Quiz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Cls_Calculator"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/button_Quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_Quiz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Recipes"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>