<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BMI_Calculator">

    <TextView
        android:id="@+id/txtView_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:text="@string/txtView_weight"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editText_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="5"
        android:textAlignment="center"
        android:inputType="numberDecimal"
        android:autofillHints="Enter your weight amount in kilograms"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/txtView_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:text="@string/txtView_height"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editText_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="5"
        android:textAlignment="center"
        android:inputType="numberDecimal"
        android:autofillHints="Enter your height amount in centimeters"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/txtView_bmi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtView_BMI_result"
        android:layout_marginTop="80dp"
        android:textSize="24sp"
        android:textAlignment="center" />

</LinearLayout>